src/objects/Requirement_Basic__c.object
<CustomObject>
    <description>Requirements object for the basic Requirements app</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security (Profile/Roles/Layouts)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements_Basic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gap_Detail__c</fullName>
        <label>Gap Detail</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gap__c</fullName>
        <label>Gap</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lines_of_Business_Requestor__c</fullName>
        <label>Lines of Business Requestor-</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Object_Functionality__c</fullName>
        <label>Object / Functionality</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appexchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand / Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ideas / Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports / Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Sign On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution / Knowledge Base</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Open_Issues__c</fullName>
        <label>Open Issues</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Approach__c</fullName>
        <label>Proposed Approach</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Requirement - for duplicates or joint requirements or parent/child</description>
        <inlineHelpText>Related Requirement - for duplicates or joint requirements or parent/child</inlineHelpText>
        <label>Related Requirement</label>
        <referenceTo>Requirement_Basic__c</referenceTo>
        <relationshipLabel>Related Requirements</relationshipLabel>
        <relationshipName>Requirements_Basic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Statement__c</fullName>
        <description>Description of business requirement</description>
        <inlineHelpText>Description of business requirement</inlineHelpText>
        <label>Requirement Statement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Status__c</fullName>
        <label>Requirement Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Scope - Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training / Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirement_Title__c</fullName>
        <label>Requirement Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_Requirement__c</fullName>
        <label>Source of Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Original / BPR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requirement (Basic)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Requirement (Basic) ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements (Basic)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>